# tf-insightface

./: CMakeLists.txt  readme.md
include/: base.h  face_preprocess.hpp  facenet.hpp  featextractor_base.hpp  featextractor_factory.hpp  insightface.hpp  insightface_base.hpp
src/: base.cpp  demo.cpp  face_preprocess.cpp  facenet.cpp  insightface.cpp
